--- a/inicio.html
+++ b/inicio.html
@@ -1,1 +1,151 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DISCRIMINE</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(145deg, #0f0f0f, #1a1a1a);
+      color: #fff;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(to right, #111, #222);
+      padding: 10px 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.8);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .navbar-left {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo {
+      width: 40px;
+      height: 40px;
+      border-radius: 8px;
+      margin-right: 10px;
+    }
+
+    .server-name {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #00ffc8;
+    }
+
+    .navbar-right a {
+      color: #ccc;
+      text-decoration: none;
+      margin-left: 20px;
+      transition: color 0.3s;
+    }
+
+    .navbar-right a:hover {
+      color: #00ffc8;
+    }
+
+    .section {
+      padding: 60px 20px;
+      border-bottom: 1px solid #333;
+    }
+
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      color: #00ffc8;
+    }
+
+    .section p {
+      max-width: 700px;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
+    .social-icons {
+      list-style: none;
+      padding: 0;
+    }
+
+    .social-icons li {
+      margin: 10px 0;
+    }
+
+    .social-icons a {
+      color: #ccc;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: color 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: #00ffc8;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+      border-top: 1px solid #222;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+  <header class="navbar">
+    <div class="navbar-left">
+      <img src="https://via.placeholder.com/40" alt="Icono del Servidor" class="logo">
+      <span class="server-name">DISCRIMINE</span>
+    </div>
+    <nav class="navbar-right">
+      <a href="#sobre-nosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
+      <a href="#client"><i class="fas fa-download"></i> Client</a>
+      <a href="#temporada"><i class="fas fa-calendar-alt"></i> Temporada</a>
+      <a href="#redes"><i class="fas fa-share-alt"></i> Redes Sociales</a>
+    </nav>
+  </header>
+
+  <main class="content">
+    <section id="sobre-nosotros" class="section">
+      <h2>Sobre Nosotros</h2>
+      <p>Bienvenido a DISCRIMINE, un servidor de Minecraft con una comunidad vibrante y modos únicos de juego.</p>
+    </section>
+
+    <section id="client" class="section">
+      <h2>Client</h2>
+      <p>Descarga nuestro launcher personalizado y accede al servidor sin complicaciones.</p>
+    </section>
+
+    <section id="temporada" class="section">
+      <h2>Temporada</h2>
+      <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos.</p>
+    </section>
+
+    <section id="redes" class="section">
+      <h2>Redes Sociales</h2>
+      <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
+      <ul class="social-icons">
+        <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+        <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="footer">
+    © 2025 DISCRIMINE - Todos los derechos reservados.
+  </footer>
+</body>
+</html>
 
