--- a/inicio.html
+++ b/inicio.html
@@ -10,7 +10,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Merriweather', sans-serif;
       background: linear-gradient(145deg, #0f0f0f, #1a1a1a);
       color: #fff;
     }
