--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: 'Merriweather', sans-serif;
-      background: linear-gradient(145deg, #0f0f0f, #1a1a1a);
+      background: url('img/bg-web.jpg');
       color: #fff;
     }
 
