--- a/inicio.html
+++ b/inicio.html
@@ -33,9 +33,8 @@
     }
 
     .logo {
-      width: 40px;
+      width: auto;
       height: 40px;
-      border-radius: 8px;
       margin-right: 10px;
     }
 
@@ -113,7 +112,6 @@
   <header class="navbar">
     <div class="navbar-left">
       <img src="https://via.placeholder.com/40" alt="Icono del Servidor" class="logo">
-      <span class="server-name">DISCRIMINE</span>
     </div>
     <nav class="navbar-right">
       <a onclick="mostrarPantalla('sobre-nosotros')"><i class="fas fa-users"></i> Sobre Nosotros</a>
