--- a/inicio.html
+++ b/inicio.html
@@ -111,7 +111,7 @@
 <body>
   <header class="navbar">
     <div class="navbar-left">
-      <img src="https://via.placeholder.com/40" alt="Icono del Servidor" class="logo">
+      <img src="img/icon-discrimine.png" alt="Icono del Servidor" class="logo">
     </div>
     <nav class="navbar-right">
       <a onclick="mostrarPantalla('sobre-nosotros')"><i class="fas fa-users"></i> Sobre Nosotros</a>
