--- a/inicio.html
+++ b/inicio.html
@@ -122,22 +122,47 @@
 
   <main class="content">
     <section id="sobre-nosotros" class="screen active">
+      <div class="screen-content">
+    <div class="screen-image">
+      <img src="img/sobrenosotros.png" alt="Imagen de Temporada">
+    </div>
+        <div class="screen-text">
       <h2>Sobre Nosotros</h2>
       <p>Bienvenido a DISCRIMINE, un servidor de Minecraft con una comunidad vibrante y modos únicos de juego.</p>
-    </section>
+        </div>
+        </section>
 
     <section id="client" class="screen">
+      <div class="screen-content">
+    <div class="screen-image">
+      <img src="img/temporada.png" alt="Imagen de Temporada">
+    </div>
+        <div class="screen-text">
       <h2>Client</h2>
       <p>Descarga nuestro launcher personalizado y accede al servidor sin complicaciones.</p>
       <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Launcher</a></p>
-    </section>
+        </div>
+        </section>
 
     <section id="temporada" class="screen">
-      <h2>Temporada</h2>
-      <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos únicos.</p>
-    </section>
+  <div class="screen-content">
+    <div class="screen-image">
+      <img src="img/temporada.png" alt="Imagen de Temporada">
+    </div>
+    <div class="screen-text">
+      <h2>Temporada</h2>
+      <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos únicos.</p>
+    </div>
+  </div>
+</section>
+
 
     <section id="redes" class="screen">
+      <div class="screen-content">
+        <div class="screen-image">
+          <img src="img/redes.png">
+        </div>
+        <div class="screen-text">
       <h2>Redes Sociales</h2>
       <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
       <ul class="social-icons">
@@ -145,6 +170,7 @@
         <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
         <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
       </ul>
+        </div>
     </section>
   </main>
 
