--- a/inicio.html
+++ b/inicio.html
@@ -104,7 +104,33 @@
       border-top: 1px solid #222;
       font-size: 0.9rem;
       color: #888;
-    }
+
+     .screen-content {
+  display: flex;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.screen-image {
+  width: 300px;
+  aspect-ratio: 1 / 1;
+  flex-shrink: 0;
+}
+
+.screen-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.screen-text {
+  flex: 1;
+}
+
+    
   </style>
 </head>
 <body>
