--- a/inicio.html
+++ b/inicio.html
@@ -161,7 +161,7 @@
     <section id="client" class="screen">
       <div class="screen-content">
     <div class="screen-image">
-      <img src="img/temporada.png" alt="Imagen de Temporada">
+      <img src="img/client.png" alt="Imagen de Temporada">
     </div>
         <div class="screen-text">
       <h2>Client</h2>
@@ -186,7 +186,7 @@
     <section id="redes" class="screen">
       <div class="screen-content">
         <div class="screen-image">
-          <img src="img/redes.png">
+          <img src="img/redessociales.png">
         </div>
         <div class="screen-text">
       <h2>Redes Sociales</h2>
