--- a/inicio.html
+++ b/inicio.html
@@ -113,14 +113,13 @@
 }
 
 .screen-image {
-  width: 300px;
+  width: auto;
+  height: 40px;
   aspect-ratio: 1 / 1;
   flex-shrink: 0;
 }
 
 .screen-image img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
