--- a/inicio.html
+++ b/inicio.html
@@ -113,14 +113,14 @@
 }
 
 .screen-image {
-  width: auto;
+  width: 40px;
   height: 40px;
   aspect-ratio: 1 / 1;
   flex-shrink: 0;
 }
 
 .screen-image img {
-  width: auto;
+  width: 40px;
   height: 40px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
