--- a/inicio.html
+++ b/inicio.html
@@ -150,7 +150,7 @@
     <section id="sobre-nosotros" class="screen active">
       <div class="screen-content">
     <div class="screen-image">
-      <img src="img/sobrenosotros.png" alt="Imagen de Temporada">
+      <img src="img/sobrenosotros.png" alt="Imagen de Temporada" width="40" height="40">
     </div>
         <div class="screen-text">
       <h2>Sobre Nosotros</h2>
@@ -161,7 +161,7 @@
     <section id="client" class="screen">
       <div class="screen-content">
     <div class="screen-image">
-      <img src="img/client.png" alt="Imagen de Temporada">
+      <img src="img/client.png" alt="Imagen de Temporada" width="40" height="40">
     </div>
         <div class="screen-text">
       <h2>Client</h2>
@@ -173,7 +173,7 @@
     <section id="temporada" class="screen">
   <div class="screen-content">
     <div class="screen-image">
-      <img src="img/temporada.png" alt="Imagen de Temporada">
+      <img src="img/temporada.png" alt="Imagen de Temporada" width="40" height="40">
     </div>
     <div class="screen-text">
       <h2>Temporada</h2>
@@ -186,7 +186,7 @@
     <section id="redes" class="screen">
       <div class="screen-content">
         <div class="screen-image">
-          <img src="img/redessociales.png">
+          <img src="img/redessociales.png" width="40" height="40">
         </div>
         <div class="screen-text">
       <h2>Redes Sociales</h2>
