--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DISCRIMINE - Servidor de Minecraft</title>
+  <title>DISCRIMINE</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
@@ -154,7 +154,9 @@
     </div>
         <div class="screen-text">
       <h2>Sobre Nosotros</h2>
-      <p>Bienvenido a DISCRIMINE, un servidor de Minecraft con una comunidad vibrante y modos únicos de juego.</p>
+      <p>Bienvenido a DISCRIMINE, una comunidad grande y en constante crecimiento, donde jugadores de todas las plataformas pueden disfrutar de una experiencia única en Minecraft.
+Descubre un servidor sin límites, con un mundo por explorar, con sistema de economía, combate mejorado y compatibilidad total desde móvil hasta PC.
+¡Únete hoy y forma parte de algo extraordinario!</p>
         </div>
         </section>
 
@@ -165,8 +167,8 @@
     </div>
         <div class="screen-text">
       <h2>Client</h2>
-      <p>Descarga nuestro launcher personalizado y accede al servidor sin complicaciones.</p>
-      <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Launcher</a></p>
+      <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
+      <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
         </section>
 
@@ -192,7 +194,7 @@
       <h2>Redes Sociales</h2>
       <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
       <ul class="social-icons">
-        <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+        <li><a href="https://discord.gg/DE2DUDtzZm"><i class="fab fa-discord"></i> Discord</a></li>
         <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
         <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
       </ul>
