--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
     .server-name {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #00ffc8;
+      color: #50535C;
     }
 
     .navbar-right a {
@@ -68,7 +68,7 @@
     .screen h2 {
       font-size: 2rem;
       margin-bottom: 10px;
-      color: #00ffc8;
+      color: 50535C;
     }
 
     .screen p {
@@ -94,7 +94,7 @@
     }
 
     .social-icons a:hover {
-      color: #00ffc8;
+      color: #D5DEF5;
     }
 
     .footer {
