--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
     .server-name {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #50535C;
+      color: #0d0e0f;
     }
 
     .navbar-right a {
@@ -52,7 +52,7 @@
     }
 
     .navbar-right a:hover {
-      color: #00ffc8;
+      color: ##0d0e0f;
     }
 
     .screen {
@@ -94,7 +94,7 @@
     }
 
     .social-icons a:hover {
-      color: #D5DEF5;
+      color: #0d0e0f;
     }
 
     .footer {
