--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
     .server-name {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #0d0e0f;
+      color: #f8de4d;
     }
 
     .navbar-right a {
@@ -52,7 +52,7 @@
     }
 
     .navbar-right a:hover {
-      color: #0d0e0f;
+      color: #f8de4d;
     }
 
     .screen {
