--- a/inicio.html
+++ b/inicio.html
@@ -68,7 +68,7 @@
     .screen h2 {
       font-size: 2rem;
       margin-bottom: 10px;
-      color: 50535C;
+      color: f8de4d;
     }
 
     .screen p {
