--- a/inicio.html
+++ b/inicio.html
@@ -157,7 +157,7 @@
       <img src="img/sobrenosotros.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
         <div class="screen-text">
-      <h2>Sobre Nosotros</h2>
+      <h2 style="color: #0d0e0f;">Sobre Nosotros</h2>
       <p>Bienvenido a DISCRIMINE, una comunidad grande y en constante crecimiento, donde jugadores de todas las plataformas pueden disfrutar de una experiencia única en Minecraft.
 Descubre un servidor sin límites, con un mundo por explorar, con sistema de economía, combate mejorado y compatibilidad total desde móvil hasta PC.
 ¡Únete hoy y forma parte de algo extraordinario!</p>
