--- a/inicio.html
+++ b/inicio.html
@@ -94,7 +94,7 @@
     }
 
     .social-icons a:hover {
-      color: #0d0e0f;
+      color: #f8de4d;
     }
 
     .footer {
@@ -128,13 +128,7 @@
 
 .screen-text {
   flex: 1;
-}
-
-      .screen-text h2 {
-        color: #0d0e0f;
-      }
-
-    
+}   
   </style>
 </head>
 <body>
@@ -157,7 +151,7 @@
       <img src="img/sobrenosotros.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
         <div class="screen-text">
-      <h2 style="color: #0d0e0f;">Sobre Nosotros</h2>
+      <h2 style="color: #f8de4d;">Sobre Nosotros</h2>
       <p>Bienvenido a DISCRIMINE, una comunidad grande y en constante crecimiento, donde jugadores de todas las plataformas pueden disfrutar de una experiencia única en Minecraft.
 Descubre un servidor sin límites, con un mundo por explorar, con sistema de economía, combate mejorado y compatibilidad total desde móvil hasta PC.
 ¡Únete hoy y forma parte de algo extraordinario!</p>
@@ -170,7 +164,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
       <img src="img/client.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
         <div class="screen-text">
-      <h2>Client</h2>
+      <h2 style="color: #f8de4d;">Client</h2>
       <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
       <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
@@ -182,7 +176,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
       <img src="img/temporada.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
     <div class="screen-text">
-      <h2>Temporada</h2>
+      <h2 style="color: #f8de4d;">Temporada</h2>
       <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos únicos.</p>
     </div>
   </div>
@@ -195,7 +189,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
           <img src="img/redessociales.png" width="180" height="180">
         </div>
         <div class="screen-text">
-      <h2>Redes Sociales</h2>
+      <h2 style="color: #f8de4d;">Redes Sociales</h2>
       <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
       <ul class="social-icons">
         <li><a href="https://discord.gg/DE2DUDtzZm"><i class="fab fa-discord"></i> Discord</a></li>
