--- a/inicio.html
+++ b/inicio.html
@@ -164,7 +164,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
       <img src="img/client.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
         <div class="screen-text">
-      <h2 style="color: #f8de4d;">Client</h2>
+      <h2 style="color: #676df9;">Client</h2>
       <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
       <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
@@ -189,7 +189,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
           <img src="img/redessociales.png" width="180" height="180">
         </div>
         <div class="screen-text">
-      <h2 style="color: #f8de4d;">Redes Sociales</h2>
+      <h2 style="color: #f72cc5;">Redes Sociales</h2>
       <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
       <ul class="social-icons">
         <li><a href="https://discord.gg/DE2DUDtzZm"><i class="fab fa-discord"></i> Discord</a></li>
