--- a/inicio.html
+++ b/inicio.html
@@ -164,7 +164,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
       <img src="img/client.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
         <div class="screen-text">
-      <h2 style="color: #676df9;">Client</h2>
+      <h2 style="color: #1fe2f3;">Client</h2>
       <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
       <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
