--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Descargar Client | DISCRIMINE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Client DISCRIMINE</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
@@ -13,65 +13,72 @@
       background: url('img/bg-web.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
-      text-align: center;
-      padding-bottom: 60px;
     }
 
-    .logo-principal {
-      max-width: 90%;
-      height: auto;
-      margin: 30px auto 20px;
-      display: block;
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+    }
+
+    .logo-grande {
+      width: 100%;
+      max-width: 900px;
       aspect-ratio: 16 / 9;
       object-fit: contain;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
     }
 
     .descripcion {
-      font-size: 1.3rem;
       max-width: 800px;
-      margin: 0 auto 40px;
+      text-align: center;
+      font-size: 1.2rem;
       line-height: 1.6;
-      padding: 0 20px;
+    }
+
+    .descripcion h2 {
+      color: #f8de4d;
+      font-size: 2rem;
+      margin-bottom: 15px;
     }
 
     .capturas {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      flex-wrap: wrap;
-      margin-bottom: 40px;
     }
 
     .capturas img {
       width: 100%;
       max-width: 350px;
-      border-radius: 10px;
       aspect-ratio: 16 / 9;
       object-fit: cover;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       transition: transform 0.3s;
     }
 
     .capturas img:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
     }
 
     .boton-descarga {
-      display: inline-block;
-      padding: 15px 30px;
       background-color: #00ffc8;
       color: #111;
+      padding: 15px 30px;
       font-size: 1.2rem;
       font-weight: bold;
-      border: none;
       border-radius: 10px;
-      cursor: pointer;
       text-decoration: none;
       box-shadow: 0 0 20px #00ffc8, 0 0 40px #00ffc8;
-      position: relative;
-      transition: transform 0.2s, box-shadow 0.3s;
-      animation: glowPulse 2s infinite;
+      transition: all 0.3s ease;
+      animation: pulse 2s infinite;
     }
 
     .boton-descarga:hover {
@@ -79,12 +86,12 @@
       box-shadow: 0 0 30px #00ffc8, 0 0 60px #00ffc8;
     }
 
-    @keyframes glowPulse {
+    @keyframes pulse {
       0%, 100% {
         box-shadow: 0 0 20px #00ffc8, 0 0 40px #00ffc8;
       }
       50% {
-        box-shadow: 0 0 40px #00ffc8, 0 0 80px #00ffc8;
+        box-shadow: 0 0 30px #00ffc8, 0 0 60px #00ffc8;
       }
     }
 
@@ -96,24 +103,20 @@
   </style>
 </head>
 <body>
-
-  
-  <img src="img/logo-client.png" alt="Logo del Cliente Discrimine" class="logo-principal">
-
-  <div class="descripcion">
-    <h2 style="color:#f8de4d;">Client DISCRIMINE para PC</h2>
-    <p>¡Instala nuestro Client optimizado y entra directo al servidor! Incluye mods esenciales, rendimiento mejorado, compatibilidad total con nuestro servidor, y todo preconfigurado para que no pierdas tiempo. Compatible con Windows 10/11.</p>
-  </div>
-
-  <div class="capturas">
-    <img src="img/captura1.jpg" alt="Captura 1">
-    <img src="img/captura2.jpg" alt="Captura 2">
-    <img src="img/captura3.jpg" alt="Captura 3">
-  </div>
-
-  <a href="https://tu-enlace-de-descarga.com/client.zip" class="boton-descarga">
-    <i class="fas fa-download"></i> Descargar Client
-  </a>
-
+  <main class="container">
+    <img src="img/logo-client.png" alt="Logo Client DISCRIMINE" class="logo-grande">
+    <div class="descripcion">
+      <h2>Client Oficial de DISCRIMINE para PC</h2>
+      <p>Descarga nuestro cliente listo para jugar y conéctate al servidor sin configuraciones complicadas. Incluye mods esenciales, optimización de rendimiento, y acceso directo al mundo de DISCRIMINE. Compatible con Windows 10 y 11.</p>
+    </div>
+    <div class="capturas">
+      <img src="img/captura1.jpg" alt="Captura 1">
+      <img src="img/captura2.jpg" alt="Captura 2">
+      <img src="img/captura3.jpg" alt="Captura 3">
+    </div>
+    <a href="https://tu-enlace-de-descarga.com/client.zip" class="boton-descarga">
+      <i class="fas fa-download"></i> Descargar Client
+    </a>
+  </main>
 </body>
 </html>
