--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -27,7 +27,7 @@
     }
 
     .logo-wrapper {
-      width: 150%;
+      width: 150px;
       max-width: 400px;
       position: relative;
       padding-top: 56.25%;
