--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -27,7 +27,8 @@
     }
 
     .logo-wrapper {
-      width: 150px;
+      height: auto;
+      width: 100%;
       max-width: 400px;
       position: relative;
       padding-top: 56.25%;
