--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -27,9 +27,8 @@
     }
 
     .logo-wrapper {
-      height: auto;
+      height: 100%;
       width: 100%;
-      max-width: 400px;
       position: relative;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
       border-radius: 10px;
@@ -40,8 +39,6 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: auto;
       object-fit: contain;
     }
 
@@ -120,7 +117,7 @@
 <body>
   <main class="container">
     <header class="logo-wrapper">
-      <img src="img/logo-client.png" alt="Logo del cliente DISCRIMINE">
+      <img src="img/logo-client.png" alt="Logo del cliente DISCRIMINE" width="200" height="auto">
     </header>
 
     <section class="descripcion">
