--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -27,9 +27,8 @@
     }
 
     .logo-wrapper {
-      height: 100%;
-      width: 100%;
-      position: relative;
+      height: auto;
+      width: 200px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
       border-radius: 10px;
       overflow: hidden;
