--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -30,6 +30,9 @@
       height: auto;
       width: 200px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border-radius: 10px;
       overflow: hidden;
     }
