--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -28,20 +28,19 @@
 
     .logo-wrapper {
       height: auto;
-      width: 200px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      overflow: hidden;
+      width: 200px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      overflow: hidden;
     }
 
     .logo-wrapper img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      object-fit: contain;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
     }
 
     .descripcion {
