--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Cliente oficial de DISCRIMINE para PC. Descarga directa con mods y optimización.">
-  <title>Client DISCRIMINE</title>
+  <title>Client DISCRIMINE.</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
