--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -44,7 +44,7 @@
     }
 
     .descripcion {
-      max-width: auto;
+      max-width: 1200px;
       text-align: center;
       font-size: 1.2rem;
       line-height: 1.6;
