--- a/inicio.html
+++ b/inicio.html
@@ -166,7 +166,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
         <div class="screen-text">
       <h2 style="color: #1fe2f3;">Client</h2>
       <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
-      <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
+      <p><a href="https://www.discrimine.org/download/discrimine-client" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
         </section>
 
