--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -137,7 +137,7 @@
     </section>
 
     <a href="https://tu-enlace-de-descarga.com/client.zip" class="boton-descarga">
-      <i class="fas fa-download"></i> Descargar Client
+      <i class="fas fa-download"></i> Descargar Beta-Mods
     </a>
   </main>
 </body>
