--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <a href="https://tu-enlace-de-descarga.com/client.zip" class="boton-descarga">
+    <a href="https://drive.google.com/drive/folders/1GDJnbE_K70Kx47d5sKUnq138eP0OLdni?usp=sharing" class="boton-descarga">
       <i class="fas fa-download"></i> Descargar Beta-Mods
     </a>
   </main>
