--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -62,10 +62,8 @@
     }
 
     .captura-wrapper {
-      width: 100%;
-      max-width: 350px;
+      width: 300px;
       position: relative;
-      padding-top: 56.25%;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       overflow: hidden;
@@ -80,8 +78,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: cover;
     }
 
