--- a/download/discrimine-client.html
+++ b/download/discrimine-client.html
@@ -62,7 +62,7 @@
     }
 
     .captura-wrapper {
-      width: 300px;
+      width: auto;
       position: relative;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -78,7 +78,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      height: auto;
+      height: 300px;
       object-fit: cover;
     }
 
@@ -123,13 +123,13 @@
 
     <section class="capturas">
       <div class="captura-wrapper">
-        <img src="img/captura1.jpg" alt="Captura del juego 1">
+        <img src="img/captura1.jpg" alt="Captura del juego 1" width="auto" height="400">
       </div>
       <div class="captura-wrapper">
-        <img src="img/captura2.jpg" alt="Captura del juego 2">
+        <img src="img/captura2.jpg" alt="Captura del juego 2" width="auto" height="400">
       </div>
       <div class="captura-wrapper">
-        <img src="img/captura3.jpg" alt="Captura del juego 3">
+        <img src="img/captura3.jpg" alt="Captura del juego 3" width="auto" height="400">
       </div>
     </section>
 
