--- a/inicio-mobile.html
+++ b/inicio-mobile.html
@@ -182,9 +182,9 @@
           <img src="img/client.png" alt="Client">
         </div>
         <div class="screen-text">
-          <h2 style="color: #1fe2f3;">Client</h2>
-          <p>Descarga nuestro Cliente y accede al servidor sin complicaciones.</p>
-          <p><a href="#" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
+          <h2 style="color: #1fe2f3;">Launcher Mobile</h2>
+          <p>Descarga nuestro Launcher de Mobile de preferencia!!</p>
+          <p><a href="https://foldcraftlauncher.com/" style="color:#00ffc8;"><i class="fas fa-download"></i> Descargar Client</a></p>
         </div>
       </div>
     </section>
