--- a/inicio-mobile.html
+++ b/inicio-mobile.html
@@ -195,8 +195,8 @@
           <img src="img/temporada.png" alt="Temporada">
         </div>
         <div class="screen-text">
-          <h2>Temporada</h2>
-          <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos únicos.</p>
+          <h2>Unavailable</h2>
+          <p>No disponible X-X</p>
         </div>
       </div>
     </section>
