--- a/inicio.html
+++ b/inicio.html
@@ -176,8 +176,8 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
       <img src="img/temporada.png" alt="Imagen de Temporada" width="180" height="180">
     </div>
     <div class="screen-text">
-      <h2 style="color: #f8de4d;">Temporada</h2>
-      <p>Estamos en la Temporada 5: "El Amanecer del Nether". Nuevas mazmorras, economía y eventos únicos.</p>
+      <h2>Unavailable</h2>
+      <p>No disponible X-X</p>
     </div>
   </div>
 </section>
