--- a/inicio-mobile.html
+++ b/inicio-mobile.html
@@ -210,7 +210,7 @@
           <h2 style="color: #f72cc5;">Redes Sociales</h2>
           <p>Síguenos en nuestras redes para mantenerte al tanto de todo:</p>
           <ul class="social-icons">
-            <li><a href="https://discord.gg/DE2DUDtzZm"><i class="fab fa-discord"></i> Discord</a></li>
+            <li><a href="https://discord.gg/Yq9YmPXb3n"><i class="fab fa-discord"></i> Discord</a></li>
             <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
             <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
           </ul>
