--- a/inicio-mobile.html
+++ b/inicio-mobile.html
@@ -231,7 +231,7 @@
 
       // Si NO es móvil (probablemente PC), redirigir
       if (!esMovil) {
-        window.location.href = "https://tu-enlace-personalizado.com"; // Cambia esto por tu URL
+        window.location.href = "https://discrimine.org/inicio"; // Cambia esto por tu URL
       }
     };
   </script>
