--- a/inicio.html
+++ b/inicio.html
@@ -211,7 +211,7 @@ Descubre un servidor sin límites, con un mundo por explorar, con sistema de eco
     }
 
     if (esDispositivoMovil()) {
-    window.location.href = "https://www.discrimine.org/mobile";
+    window.location.href = "https://www.discrimine.org/inicio-mobile";
     }
   </script>
 </body>
