--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Detector de Dispositivo</title>
+    <title>Auth Client...</title>
+    <link rel="icon" type="image/png" href="discrimine-ico.png">
     <script>
         // Función para detectar si es un dispositivo móvil
         function esDispositivoMovil() {
