--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Auth Client...</title>
-    <link rel="icon" type="image/png" href="discrimine-ico.png">
+    <link rel="icon" type="image/png" href="discrimine-icon.png">
     <script>
         // Función para detectar si es un dispositivo móvil
         function esDispositivoMovil() {
